--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#app {
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 1220px;
+  height: calc(100vh - 80px);
+  margin: auto;
+  padding: 40px 0;
 }
 
-.App-link {
-  color: #61dafb;
+ul,
+li {
+  padding: 0;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+ul {
+  list-style-type: none;
+}
+
+table {
+  border-color: gray;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+
+.vitals-table {
+  width: 100%;
+  th {
+    width: 1px;
+    white-space: nowrap;
+    color: #737373;
+    font-size: 0.875rem;
+    text-align: right;
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: #f0f0f0;
+    padding: 4px 10px;
   }
-  to {
-    transform: rotate(360deg);
+  td {
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: #f0f0f0;
+    padding: 4px 10px;
   }
 }
